feat(Agendamento, prontuarios, unidades, mapper, JWT, Docker,) Adicionar: Controller,implementar Dtos, Criar modelos relaiconais com enums, implementar services e repositorys, configurar utilitarios jwt para segurança e autenticação, altera siginicativamente a estrutra do backend com novos endpoint